welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:36: error: ';' expected but ')' found.
		marquerSol(tableau((n-1) + decalage) % n))
                                                         ^